# mir_ws

./: .gitignore  frames.gv
build_isolated/: catkin_make_isolated.cache
build_isolated/aruco/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/aruco_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/aruco_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mir_actions/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/mir_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/aruco/: .catkin  (+1 more)
map/: game_s12.pgm  game_s12.yaml
src/workstation_detector/: CMakeLists.txt  package.xml
src/workstation_detector/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/workstation_detector/launch/: line_detector.launch  machine_exploration.launch  tsp_navigation.launch  visualization.launch  workstation_detection.launch
src/workstation_detector/rviz/: cluster_visualization.rviz  machine_exploration.rviz
src/workstation_detector/scripts/: check_if_line_matches_map_wall.py  exploration_controller.py  move_base.py  navigate_to_first_line.py  navigate_to_line_with_cmd_vel.py  navigate_with_tsp.py  navigation_with_cmd.py  print_laserdata.py  tsp.py  workstation_detector.py
(+329 files in other folders)
