<?xml version="1.0"?>
<package format="2">
  <name>workstation_detector</name>
  <version>0.0.0</version>
  <description>Workstation detector package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>
